<resources>
    <string name="app_name">拽我学车</string>
    <string name="prompt">提示</string>
    <string name="exit_app_message">确定要退出吗?</string>
    <string name="hint_login">账号登录</string>
    <!-- 导向界面 -->
    <string name="guide_start">开启体验</string>
    <!-- 下拉刷新和上拉加载更多的文本 -->
    <string name="pull_to_refresh_header_hint_normal">@string/pushmsg_center_pull_down_text</string>
    <string name="pull_to_refresh_header_hint_normal2">上拉可以刷新</string>
    <string name="pull_to_refresh_header_hint_ready">松开后刷新</string>
    <string name="pull_to_refresh_header_last_time">@string/pushmsg_center_pull_down_update_time</string>
    <string name="pull_to_refresh_network_error">网络不给力，请检查网络</string>
    <string name="pushmsg_center_pull_down_text">下拉可以刷新</string>
    <string name="pushmsg_center_pull_release_text">松开获取更多</string>
    <string name="pushmsg_center_pull_down_update_time">最后更新时间 : </string>
    <string name="pushmsg_center_load_more_ongoing_text">正在加载中</string>
    <string name="xsearch_loading">正在加载中…</string>
    <!-- 版本更新 -->
    <string name="update_new_hint">版本更新</string>
    <string name="version_new_hint">有新版本啦！更新内容如下：</string>
    <string name="check_new_hint">拍照或文字回答</string>
    <string name="no_update_hint">暂不更新</string>
    <string name="update_now_hint">更新</string>
    <string name="update_desc_hint">描述:</string>
    <string name="update_new_version">发现新版本v</string>

    <!-- 网络和内存卡提示 -->
    <string name="check_connection">网络又调皮了，检查一下吧~</string>
    <string name="server_net_error">请求失败,网络或服务器发生异常</string>
    <string name="server_error">服务器发生异常</string>

    <!-- 友好提示页面 -->
    <string name="amicable_view_error">哎呀，出错了!</string>
    <string name="amicable_view_tryagain">轻触屏幕，重新加载试试</string>
    <string name="service_error_text1">网络不稳定</string>
    <string name="maybe_reason">可能原因:</string>
    <string name="service_error_text2">尚未接入互联网</string>
    <string name="service_error_text3">安全软件禁止访问网络</string>
    <string name="service_error_text4">服务器发生未知异常</string>
    <string name="has_no_source">暂无</string>
    <string name="error_bengkui">很抱歉，程序出现异常，即将退出！</string>
    <string name="error_getinfo">获取数据失败</string>
    <string name="nomore_getinfo">没有更多数据</string>

    <!-- 下拉刷新 -->
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载&#8230;</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="exit">退出</string>
    <string name="lost_session">登录失效,请重新登录</string>
    <string name="relogin">重新登录</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="settings">设置</string>
    <!-- 文件路径 -->
    <string name="bind_card_web">/bindCardWeb/</string>
    <string name="download">/Download/</string>
    <string name="welcome">/Welcome/</string>
    <string name="assets_save">/assets/</string>
    <string name="home_pic_path">/HomePic/</string>
    <string name="bitmap_cache">/bitmapcache/</string>
    <string name="dir">/Android/data/com.drive.student</string>
    <string name="camera_temp">/cameratemp/</string>
    <string name="audio_cache">/audiocache/</string>
    <string name="file_cache">/filecache/</string>
    <string name="http_cache_dir">/httpcache/</string>
    <string name="headicon">/headicon/</string>
    <!-- 关于 -->
    <string name="about_hint_is_new">已是最新版本</string>
    <string name="function_introduce">功能介绍</string>
    <string name="help">帮助</string>
    <string name="hint_version">当前版本:V</string>
    <string name="version_update">版本更新</string>
    <string name="version_update_hint">已是最新版本</string>
    <string name="version_update_new">有新版本</string>
    <string name="never_notice">不再提示</string>
    <string name="car_search_hint">请输入搜索条件</string>
    <string name="current_city">当前定位城市</string>
    <string name="hot_city">热门城市</string>
    <string name="all_city">全部城市</string>
    <string name="beijing">北京</string>
    <string name="shanghai">上海</string>
    <string name="guangzhou">广州</string>
    <string name="shenzhen">深圳</string>
    <string name="save">保存</string>
    <string name="leave_message">留言</string>
    <string name="logout">退出登录</string>
    <string name="exit_current_account">退出当前账号</string>
    <string name="exit_app">关闭应用</string>
    <string name="pwd_valide_notice">密码必须是6–12位的字母或数字</string>
    <string name="drive_student_push_tag">drive_student_jpush</string>
    <string name="next_step">下一步</string>
    <string name="expire">已过期</string>
    <string name="invalidate">失效</string>
    <string name="has_invalid">已失效</string>
    <!-- 登录界面 -->
    <string name="login_telephone">手机号</string>
    <string name="login_pwd">密码</string>
    <string name="reinput_pwd">再次输入密码</string>
    <string name="login_forget_pwd">忘记密码？</string>
    <string name="login_header_register">注册</string>
    <string name="login_hint_empty">手机号或密码不能为空</string>
    <string name="login_fail_get_detail">获取用户详细信息失败</string>

    <!-- 注册界面 -->
    <string name="register_authcode">验证码</string>
    <string name="register_title">填写注册信息</string>
    <string name="register_get_authcode">获取验证码</string>
    <string name="register_again_authcode_before">重新获取验证码（</string>
    <string name="register_again_authcode_after">）</string>
    <string name="register_success">恭喜您，注册成功</string>
    <string name="register_hint_empty_telephone">手机号不能为空哦</string>
    <string name="register_hint_empty_verity">验证码不能为空哦</string>
    <string name="register_hint_empty_pwd">密码不能为空哦</string>
    <string name="register_hint_verify_ilegal">验证码为6位整数哦</string>

    <!-- 找回密码界面 -->
    <string name="getback_step_one">1、确定账号 > </string>
    <string name="getback_step_two">2、输入验证码并重置密码</string>
    <string name="getback_title">找回密码</string>
    <string name="hint_input_telephone">亲，请输入手机号</string>
    <string name="hint_input_true_telephone">亲，请输入正确手机号</string>
    <string name="login_no_net">暂时没有网络了</string>
    <string name="login_input_count1">请填写帐号</string>
    <string name="login_input_psw1">请填写密码</string>
    <string name="login_net_error">解析网络出错</string>
    <string name="login_cop_error">账号或密码错误</string>
    <string name="login_server_error">服务器忙</string>
    <string name="login_server_error1">服务器内部错误</string>
    <string name="login_net_error1">服务器忙</string>
    <string name="login_json_error">json解析错误</string>
    <string name="login_notice">提醒</string>
    <string name="login_this_will">这将删除  </string>
    <string name="login_this_will2"> 用户的所有信息</string>
    <string name="get_msg_error">获取信息失败</string>
    <string name="get_msg_sucess">获取信息成功</string>
    <string name="request_sucess">操作成功</string>
    <string name="request_error">操作失败</string>
    <string name="home">首页</string>
    <string name="teacher">约教练</string>
    <string name="exam">考试</string>
    <string name="mine">我的</string>
    <string name="copy">复制</string>
    <string name="feed_back_hint_notice">请输入产品意见,我们将不断优化体验</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="sign_up_notice">（1）年龄条件:在18周岁以上、70周岁以下，体检合格 有下列情形之一的，不得申请机动车驾驶证: \n(一)有器质性心脏病、癫痫病、美尼尔氏症、眩晕症、癔病、震颤麻痹、精神病、痴呆以及影响肢体活动的神经系统疾病等妨碍安全驾驶疾病的; \n(二)三年内有吸食、注射毒品行为或者解除强制隔离戒毒措施未满三年，或者长期服用依赖性精神药品成瘾尚未戒除的; \n(三)造成交通事故后逃逸构成犯罪的; \n(四)饮酒后或者醉酒驾驶机动车发生重大交通事故构成犯罪的; \n(五)醉酒驾驶机动车或者饮酒后驾驶营运机动车依法被吊销机动车驾驶证未满五年的; \n(六)醉酒驾驶营运机动车依法被吊销机动车驾驶证未满十年的; \n(七)因其他情形依法被吊销机动车驾驶证未满二年的; \n(八)驾驶许可依法被撤销未满三年的; \n(九)法律、行政法规规定的其他情形。 \n（2）所需材料 根据个人情况不同，实际需要材料不同： \n本市户口：需要携带本人身份证原件、身份证复印件一张、白底一寸彩照8张。\n外市户口：需要在考驾照当地班里居住证，然后携带您的居住证和身份证原件、身份证复印件、白底一寸彩照8张。 \n备注：证件在有效期范围内可以报名，但是为了不影响您之后的考试，建议您尽快办理正式身份证件。\n（3）报名流程：选驾校>预报名>体检>拍照>签合同>缴费
</string>
    <string name="tijian_notice">驾驶员体检，根据《中华人民共和国道路交通安全法》和公安部71号令第四十二条规定：如果符合每年体检一次的驾驶员，当年没有体检，超期一年仍未提交体检证明的，将被注销驾驶证。\n凭有效身份证参加拍照体检，外地学员由公安车辆管理部门网上查询至申请人原籍公安局车管部门，在原籍未申领过驾驶执照方可上车。\n（1）体检项目：\n心电图、血压、身高、体重、听力、握力、背脊力、视力和色觉。\n（2）体检地点：\n二甲级以上的医院可以做学车体检（当然三甲级的更可以了），二甲级以上的医院有专门学车体检的部门，做体检时不用挂号，拿着驾校专门的体检表到二甲级以上的医院做体检就可以了。\n（3）体检内容：\n①身高：不限 ；\n②视力：两眼裸视力或者矫正视力达到对数视力表4.9以上；\n③辨色力：无红绿色盲；\n④听力：两耳分别距音叉50厘米能辨别声源方向；\n⑤上肢：双手拇指健全，每只手其他手指必须有三指健全，肢体和手指运动功能正常；\n⑥下肢：运动功能正常。申请驾驶手动挡汽车，下肢不等长度不得大于5厘米。申请驾驶自动挡汽车，右下肢应当健全；\n⑦躯干、颈部：无运动功能障碍。\n（4）体检合格：\n体检合格持体检合格的《机动车驾驶人身体条件证明》，身份证复印件（外地身份证同时出具暂住证复印件）预约科目一考试。</string>
    <string name="common_problem_notice">Q：哪些疾病者不得申请机动车驾驶证？\nA：有器质性心脏病、癫痫病、美尼尔氏症、眩晕症、癔病、震颤麻痹、精神病、痴呆以及影响肢体活动的神经系统疾病等妨碍安全驾驶疾病的。\nQ：一只眼可以通过驾照体检吗？\nA：两眼裸视力或者矫正视力达到对数视力表4.9以上;所以按照驾照体检要求，单眼失明是通不过驾照体检的。</string>
    <string name="xueche_notice">1. 预约免费试学\n在首页提交试学申请，客服将在24小时内与您联系，安排试学时间及场地。试学内容包括熟悉场地，教练教学，体验服务。试学满意再报名. \n3. 线上填写报名信息 “确认报名”，输入您的身份信息和联系方式；如有优惠券或推荐码，可选择使用. \n4. 支付学费完成报名 我们支持微信支付、支付宝等多种方式付款. \n5. 提交材料参加体检 工作人员将在24小时内与您联系签订培训协议，并告知需要准备的注册材料；您准备好材料后，通知工作人员，工作人员将在24小时内上门收取材料，提交至车管所注册，并为您安排体检. \n6. 科目一学习 科目一学习、模拟测试和在线约考。考试当天，工作人员提供接送服务. \n7. 科目二学习 预约科目二课程时间，将安排班车接送您上课。课程结束之后教练进行评价，反馈教练教学质量。 即可预约考试，考试当天，工作人员提供接送服务. \n8. 科目三学习 在APP内预约科目三课程时间，将安排班车接送您上课。课程结束之后可在APP对教练进行评价，反馈教练教学质量。培训完成后，即可预约考试，考试当天，工作人员提供接送服务. \n9. 科目四学习 在App进行科目四学习和模拟测试，部分地区科目三通过当天就可预约科目四考试，请您提前做好准备. \n10. 领驾照 科目四通过当天即可拿证。恭喜您拿到驾照，请遵守交通规则，谨慎驾车，珍惜自己和他人的人身财产权利！</string>
</resources>
