<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@null"
                android:padding="20dip">

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/login_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:background="@drawable/leba_shape_bg"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_container1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="100dip"
            android:orientation="vertical"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dip"
                    android:gravity="center"
                    android:text="@string/prompt"
                    android:textColor="@color/step_going"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginLeft="@dimen/dimen_15dp"
                    android:ellipsize="none"
                    android:lineSpacingExtra="5dip"
                    android:maxLines="100"
                    android:scrollHorizontally="false"
                    android:text="@string/lost_session"
                    android:textColor="@color/step_undone"
                    android:textSize="16sp"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/view_bg"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dip"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/relogin_btn"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/item_selector"
                    android:text="@string/relogin"
                    android:textColor="@color/step_going"
                    android:textSize="16sp"
                    android:visibility="visible"/>

                <View
                    android:id="@+id/fengx1"
                    android:layout_width="1px"
                    android:layout_height="fill_parent"
                    android:background="@color/view_bg"/>

                <Button
                    android:id="@+id/exit_btn"
                    android:layout_width="0dip"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/item_selector"
                    android:text="@string/exit"
                    android:textColor="@color/step_going"
                    android:textSize="16sp"
                    android:visibility="visible"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>